<?xml version="1.0"?>
<package format="2">
  <name>ik_constraint2_body_contact_sample</name>
  <version>0.0.0</version>
  <description>The ik_constraint2_body_contact_sample package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>choreonoid_viewer</depend>
  <depend>ik_constraint2</depend>
  <depend>ik_constraint2_body_contact</depend>

</package>
